# Oblivious-Digital-Tokens

./: README.md
ODT_implementation/: README.md
ODT_implementation/enclave_application/: CMakeLists.txt
ODT_implementation/enclave_application/app/: app.cpp  app.h.in
ODT_implementation/enclave_application/common/: err_msg.cpp  openssl_utility.cpp  tcommon.cpp  ucommon.cpp  utility.cpp  utility.h  verify_callback.cpp
ODT_implementation/enclave_application/enclave/: enclave.cpp  enclave.edl  enclave.h  enclave.lds
ODT_implementation/enclave_application/sgx_socket/: trusted_sgx_socket.cpp  untrusted_sgx_socket.cpp
ODT_implementation/patches/: ODT-client.patch  ODT-server.patch  PKGBUILD.patch  sgx_psw.patch
ODT_implementation/timing_measurement/: ODT-client.sh  openssl-client.sh  script-for-server-testing.sh
tamarin_proof/: README.md  model.spthy  proof.spthy
